[package]
name = "win_theme_toggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
winreg = { version = "0.10", default-features = false }
chrono = { version = "0.4", features = ["serde"] }