[package]
name = "win_theme_toggle"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
winreg = { version = "0.10", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tray-item = "0.7.1"
crossbeam-channel = "0.5"
notify = "5.0"
log = "0.4"
simplelog = "0.12"

[build-dependencies]
windres = "0.2"